adiciona itens a fazer

--- a/index.html
+++ b/index.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>Portfólio</title>
 </head>
+
 <body>
-  
+  <br>Seu nome completo;
+  <br>
+  <br>Uma foto atual sua, acompanhada de um texto alternativo, que deve ser a descrição da foto que você está usando;
+  <br>
+  <br>Uma breve descrição sobre você, destacando algumas informações como nacionalidade e a cidade/estado onde mora;
+  <br>
+  <br>Uma lista de habilidades que você possui, com destaque para aquela de que você mais se orgulha;
+  <br>
+  <br>Um link interno para a sua foto;
+  <br>
+  <br>Um link externo para algum blog de que você goste, que abra em uma nova aba;
+  <br>
+  <br>Partes do seu portfólio destacadas com negrito e/ou itálico;
+  <br>
+  <br>Um índice com links internos para as diferentes seções do seu portfólio.
+  <br>
 </body>
+
 </html>
