adiciona comandos para usar

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
 </head>
 
 <body>
+
+  <div style="background-color: gray;color: green;">
+    <h1></h1>
+    <h2></h2>
+    <p></p>
+
+  </div>
+  <img src="url" alt="descrição" width="100px">
+  <li> <a href="url">foto</a>texto</li>
+  <a href="http://" target="_blank" rel="noopener noreferrer">nome do link</a>
+
   <br>Seu nome completo;
   <br>
   <br>Uma foto atual sua, acompanhada de um texto alternativo, que deve ser a descrição da foto que você está usando;
