adiciona foto e nome

--- a/index.html
+++ b/index.html
@@ -9,18 +9,19 @@
 <body>
 
   <div style="background-color: gray;color: green;">
-    <h1></h1>
+    <h1>/h1>
     <h2></h2>
-    <p></p>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRNR9MRNcMP3sEDCWa9hV508Q7a3xQ4ruKaYQ&usqp=CAU" alt="imagem provisória" width="100px">
+    <p>Nome: Wendell Caetano de Oliveira</p>
+
 
   </div>
+  
   <img src="url" alt="descrição" width="100px">
   <li> <a href="url">foto</a>texto</li>
   <a href="http://" target="_blank" rel="noopener noreferrer">nome do link</a>
 
-  <br>Seu nome completo;
-  <br>
-  <br>Uma foto atual sua, acompanhada de um texto alternativo, que deve ser a descrição da foto que você está usando;
+
   <br>
   <br>Uma breve descrição sobre você, destacando algumas informações como nacionalidade e a cidade/estado onde mora;
   <br>
