--- a/index.html
+++ b/index.html
@@ -9,10 +9,20 @@
 <body>
 
   <div style="background-color: gray;color: green;">
-    <h1>/h1>
+    <h1>Portfólio</h1>
     <h2></h2>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRNR9MRNcMP3sEDCWa9hV508Q7a3xQ4ruKaYQ&usqp=CAU" alt="imagem provisória" width="100px">
     <p>Nome: Wendell Caetano de Oliveira</p>
+    <p>Nascido no Rio de Janeiro, onde resido até hoje</p>
+    <p>Formado em <strong>Egenharia Eletrônica</strong>, além de possuir também curso técnico na área</p>
+    <ul>
+      <em>
+      <li>tenho facilidade para aprender</li>
+      <li>sou esforçado</li>
+      <li>trabalho bem em equipe</li>
+      </em>
+
+    </ul>
 
 
   </div>
@@ -23,15 +33,10 @@
 
 
   <br>
-  <br>Uma breve descrição sobre você, destacando algumas informações como nacionalidade e a cidade/estado onde mora;
-  <br>
-  <br>Uma lista de habilidades que você possui, com destaque para aquela de que você mais se orgulha;
-  <br>
   <br>Um link interno para a sua foto;
   <br>
   <br>Um link externo para algum blog de que você goste, que abra em uma nova aba;
   <br>
-  <br>Partes do seu portfólio destacadas com negrito e/ou itálico;
   <br>
   <br>Um índice com links internos para as diferentes seções do seu portfólio.
   <br>
