links externos e internos

--- a/index.html
+++ b/index.html
@@ -10,10 +10,16 @@
 
   <div style="background-color: gray;color: green;">
     <h1>Portfólio</h1>
-    <h2></h2>
+    <h2>
+      <ul>
+        <li><a href="#foto">Foto</a></li>
+        <li><a href="#nome">Nome</a></li>
+        <li><a href="#descrição">Descrição</a></li>
+      </ul>
+    </h2>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRNR9MRNcMP3sEDCWa9hV508Q7a3xQ4ruKaYQ&usqp=CAU" alt="imagem provisória" width="100px">
-    <p>Nome: Wendell Caetano de Oliveira</p>
-    <p>Nascido no Rio de Janeiro, onde resido até hoje</p>
+    <p>Nome: Wendell Caetano de Oliveira </p>
+    <p>Nascido no Rio de Janeiro, onde resido até hoje id</p>
     <p>Formado em <strong>Egenharia Eletrônica</strong>, além de possuir também curso técnico na área</p>
     <ul>
       <em>
@@ -21,25 +27,12 @@
       <li>sou esforçado</li>
       <li>trabalho bem em equipe</li>
       </em>
-
     </ul>
+
+    <a href="https://github.com/wendellrj/wendellrj.github.io" target="_blank" rel="noopener noreferrer">GitHub</a>
 
 
   </div>
-  
-  <img src="url" alt="descrição" width="100px">
-  <li> <a href="url">foto</a>texto</li>
-  <a href="http://" target="_blank" rel="noopener noreferrer">nome do link</a>
-
-
-  <br>
-  <br>Um link interno para a sua foto;
-  <br>
-  <br>Um link externo para algum blog de que você goste, que abra em uma nova aba;
-  <br>
-  <br>
-  <br>Um índice com links internos para as diferentes seções do seu portfólio.
-  <br>
 </body>
 
 </html>
