--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
       <ul>
         <li><a href="#foto">Foto</a></li>
         <li><a href="#nome">Nome</a></li>
-        <li><a href="#descrição">Descrição</a></li>
+        <li><a href="#descricao">Descrição</a></li>
       </ul>
     </h2>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRNR9MRNcMP3sEDCWa9hV508Q7a3xQ4ruKaYQ&usqp=CAU" alt="imagem provisória" width="100px">
     <p>Nome: Wendell Caetano de Oliveira </p>
-    <p>Nascido no Rio de Janeiro, onde resido até hoje id</p>
-    <p>Formado em <strong>Egenharia Eletrônica</strong>, além de possuir também curso técnico na área</p>
+    <p>Nascido no Rio de Janeiro, onde resido até hoje</p>
+    <p>Formado em <strong>Engenharia Eletrônica</strong>, além de possuir também curso técnico na área</p>
     <ul>
       <em>
       <li>tenho facilidade para aprender</li>
