--- a/index.html
+++ b/index.html
@@ -4,6 +4,22 @@
 <head>
   <meta charset="UTF-8">
   <title>Portfólio</title>
+  <style>
+    body {
+      background-color: aqua;
+    }
+    .nome, .descricao {
+      font-family: Arial, Helvetica, sans-serif;
+    }
+     em {
+      color: rgb(67, 138, 83);
+     }
+     .descricao1 {font-size: 30px;}
+     .descricao2 {font-size: 26px;}
+     .descricao3 {font-size: 22px;}
+
+
+  </style>
 </head>
 
 <body>
@@ -18,14 +34,14 @@
       </ul>
     </h2>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRNR9MRNcMP3sEDCWa9hV508Q7a3xQ4ruKaYQ&usqp=CAU" alt="imagem provisória" width="100px">
-    <p>Nome: Wendell Caetano de Oliveira </p>
+    <p class="nome">Nome: Wendell Caetano de Oliveira </p>
     <p>Nascido no Rio de Janeiro, onde resido até hoje</p>
-    <p>Formado em <strong>Engenharia Eletrônica</strong>, além de possuir também curso técnico na área</p>
+    <p class="descricao">Formado em <strong>Engenharia Eletrônica</strong>, além de possuir também curso técnico na área</p>
     <ul>
       <em>
-      <li>tenho facilidade para aprender</li>
-      <li>sou esforçado</li>
-      <li>trabalho bem em equipe</li>
+      <li class="descricao1">tenho facilidade para aprender</li>
+      <li class="descricao2">sou esforçado</li>
+      <li class="descricao3">trabalho bem em equipe</li>
       </em>
     </ul>
 
