--- a/index.html
+++ b/index.html
@@ -3,28 +3,13 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfólio</title>
-  <style>
-    body {
-      background-color: aqua;
-    }
-    .nome, .descricao {
-      font-family: Arial, Helvetica, sans-serif;
-    }
-     em {
-      color: rgb(67, 138, 83);
-     }
-     .descricao1 {font-size: 30px;}
-     .descricao2 {font-size: 26px;}
-     .descricao3 {font-size: 22px;}
-
-
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
-  <div style="background-color: gray;color: green;">
+  <div>
     <h1>Portfólio</h1>
     <h2>
       <ul>
@@ -37,18 +22,25 @@
     <p class="nome">Nome: Wendell Caetano de Oliveira </p>
     <p>Nascido no Rio de Janeiro, onde resido até hoje</p>
     <p class="descricao">Formado em <strong>Engenharia Eletrônica</strong>, além de possuir também curso técnico na área</p>
+   
+    <h2>Lista de habilidades</h2>
     <ul>
       <em>
-      <li class="descricao1">tenho facilidade para aprender</li>
-      <li class="descricao2">sou esforçado</li>
-      <li class="descricao3">trabalho bem em equipe</li>
+        <li class="javascript">Javascript</li>
+        <li class="sql">SQL</li>
+        <li class="react">React</li>
+        <li class="bootstrap">Bootstrap</li>
+        <li class="metoAgil">Metodologias ágeis</li>
       </em>
     </ul>
 
-    <a href="https://github.com/wendellrj/wendellrj.github.io" target="_blank" rel="noopener noreferrer">GitHub</a>
+    <a href="https://github.com/wendellrj/wendellrj.github.io" target="_blank">GitHub</a>
 
 
   </div>
 </body>
 
 </html>
+
+
+
